# nn2

./: .gitignore  CMakeLists.txt  NN2Config.cmake.in  af.hpp  af_cppn.hpp  connection.hpp  cpg.hpp  cppn.hpp  elman.hpp  elman_cpg.hpp  evo_float.hpp  fcp.hpp  ff_cpg.hpp  mlp.hpp  neuron.hpp  nn.hpp  pf.hpp  rnn.hpp  test_cppn.cpp  test_cppn.hpp  test_cppn_serialization.cpp  trait.hpp
.github/workflows/: cmake.yml
tests/: CMakeLists.txt  test_cpg.cpp  test_cpg2.cpp  test_cppn.cpp  test_cppn.hpp  test_cppn_serialization.cpp  test_filter_connection.cpp  test_filter_connection.hpp
tools/: load_cppn.cpp  nn_analysis.cpp  nn_analysis.hpp  nn_analysis.py
